--- a/cursos_crud/app/views/cursos/index.html.erb
+++ b/cursos_crud/app/views/cursos/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
     <% @cursos.each do | course | %>
-        <li><%= course.title %></li>
+        <%= link_to course.title, show_cursos_path( id: course.id ) %>
     <% end %>
 </ul>
